# special-barnacle

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compile_requirements.sh  docker-compose.debug.yaml  docker-compose.deploy.yaml  docker-compose.yaml  justfile  pyproject.toml  requirements.in  requirements.txt  test.ipynb  test.py  test.sh
.github/workflows/: publish.yml
src/: api.py  app.py  data.py  db.py  load_data.py  new_recipe.json  oauth.py  reciepes.json  run.py  ui.py
src/static/css/: app.css
src/tailwindcss/: package.json  tailwind.config.js
src/tailwindcss/styles/: app.css
src/templates/: create_recipe.html  dummy.html  error.html  index.html  recipe.html  recipe_edit.html
