[project]
name = "special-barnacle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "authlib>=1.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.8",
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "mistune>=3.1.1",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
